2013-06-19  Roland Levillain  <roland@lrde.epita.fr>

	* doc/Doxyfile.in: Help Emacs fontify this file.

2013-06-18  Roland Levillain  <roland@lrde.epita.fr>

	Make mln::util::timer copy-constructible and (copy-)assignable.

	* mln/util/timer.hh: Rely on the default copy constructor and
	the default (copy-)assignment operator.

2013-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Shell-related portability fixes in Milena's Makefiles.

	* doc/Makefile.am: Rewrite patterns ``perl X `find Y''' as
	``find Y -exec perl X {} \;'' to avoid long `perl' command lines and
	please the shell.
	Wrap some long lines.

2013-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Use `perl -pi' instead of `sed -i' in Milena.

	* doc/Makefile.am,
	* doc/tools/clearbanner.sh,
	* doc/tools/todoxygen.sh:
	Here, as `sed -i' (with no backup file) behaves differently on
	GNU/Linux and Mac OS X.  For more information, see:
	http://stackoverflow.com/questions/5694228/.

2013-06-13  Roland Levillain  <roland@lrde.epita.fr>

	Update the documentation of mln_trace.

	* mln/debug/trace.hh: Here.
	Aesthetic changes.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/mln/convert.dox: Fix from_to_ module name.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Move internal code to namespace internal.

	* mln/labeling/n_max.hh: Move internal function to namespace
	internal.

	* tests/labeling/n_max.cc: Update function namespaces.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/win/rectangle2d.hh: Hide internal API.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add labeling module in documentation.

	* doc/mln/labeling/labeling.dox: New. Introduce labeling module.

	* mln/labeling/background.hh,
	* mln/labeling/colorize.hh,
	* mln/labeling/compute.hh,
	* mln/labeling/compute_image.hh,
	* mln/labeling/flat_zones.hh,
	* mln/labeling/foreground.hh,
	* mln/labeling/mean_values.hh,
	* mln/labeling/pack.hh,
	* mln/labeling/regional_maxima.hh,
	* mln/labeling/regional_minima.hh,