@@ -1,3 +1,12 @@
+2013-06-20  Roland Levillain  <roland@lrde.epita.fr>
+
+	Fix mutual dependencies between value::int_u and value::qt::rgb32.
+
+	* mln/value/int_u.hh: Move definitions...
+	* mln/value/int_u.hxx: ...here (new file).
+	* mln/value/qt/rgb32.hh: Adjust.
+	* headers.mk (nobase_include_HEADERS): Regen.
+
 2013-06-19  Roland Levillain  <roland@lrde.epita.fr>
 
 	* doc/Doxyfile.in: Help Emacs fontify this file.
